rhai/codegen/ui_tests/export_fn_raw_noreturn.stderr
error: functions marked with 'return_raw' must return Result<T, Box<EvalAltResult>>
 --> $DIR/export_fn_raw_noreturn.rs:9:13
  |
9 | #[export_fn(return_raw)]
  |             ^^^^^^^^^^

error[E0425]: cannot find function `test_fn` in this scope
  --> $DIR/export_fn_raw_noreturn.rs:19:5
   |
19 |     test_fn(&mut n);
   |     ^^^^^^^ not found in this scope
